--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service android:name=".location.LocationService"
+            android:foregroundServiceType="location"
+            android:enabled="true"/>
     </application>
 
 </manifest>
